--- a/src/app/modules/admin/components/admin-start-page/admin-start-page.component.html
+++ b/src/app/modules/admin/components/admin-start-page/admin-start-page.component.html
@@ -39,6 +39,15 @@
 
     <div class="col-md-4 mb-3">
       <div class="card card-body p-3">
+        <div class="h5">Отписанных от емейлов</div>
+        <div class="mt-1 h2">
+          {{ dashboardData.usersWithUnsubscribeMeFromAllCount }}
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-4 mb-3">
+      <div class="card card-body p-3">
         <div class="h5">Емейлов отправлено</div>
         <div class="mt-1">
           <app-items-per-day-chart
