--- a/src/app/modules/home/components/about-us/about-us.component.html
+++ b/src/app/modules/home/components/about-us/about-us.component.html
@@ -333,6 +333,75 @@
     </div>
   </div>
 
+  <div class="mb-5 card">
+    <div class="card-body p-5">
+      <div class="h1">Наши друзья</div>
+      <div class="mt-3">
+        Админы нескольких телеграм-каналов решили помочь проекту, внедрив
+        регулярные апдейты зарплат по специальностям.
+      </div>
+      <div class="mt-2">
+        <ul>
+          <li>
+            <a
+              class=""
+              href="https://t.me/Projects_KZ"
+              target="_blank"
+              title="Сообщество проектных менеджеров в Телеграм"
+              rel="noopener noreferrer"
+            >
+              ТГ-канал &#64;Projects_KZ
+            </a>
+          </li>
+          <li>
+            <a
+              class=""
+              href="https://t.me/backenderskz"
+              target="_blank"
+              title="Сообщество бэкендеров в Телеграм"
+              rel="noopener noreferrer"
+            >
+              ТГ-канал &#64;backenderskz (Kolesa Group)
+            </a>
+          </li>
+          <li>
+            <a
+              class=""
+              href="https://t.me/productskz"
+              target="_blank"
+              title="Сообщество продактов в Телеграм"
+              rel="noopener noreferrer"
+            >
+              ТГ-канал Products.kz (Kolesa Group)
+            </a>
+          </li>
+          <li>
+            <a
+              class=""
+              href="https://t.me/kzqacommunity"
+              target="_blank"
+              title="Сообщество QA специалистов в Телеграм"
+              rel="noopener noreferrer"
+            >
+              ТГ-канал KZ QA Community (Kolesa Group)
+            </a>
+          </li>
+          <li>
+            <a
+              class=""
+              href="https://t.me/teamleadkz"
+              target="_blank"
+              title="Сообщество тимлидов в Телеграм"
+              rel="noopener noreferrer"
+            >
+              ТГ-канал Сообщество тимлидов KZ (Kolesa Group)
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </div>
+
   <div class="card mb-5">
     <div class="card-body p-5">
       <div class="h1">Технологии</div>
