--- a/src/app/modules/home/components/telegram-bot/telegram-bot.component.html
+++ b/src/app/modules/home/components/telegram-bot/telegram-bot.component.html
@@ -5,9 +5,10 @@
     <div class="card-body pt-3 pb-3">
       <div>
         Да, у нас есть телеграм бот
-        <strong>&#64;techinterview_salaries_bot</strong>, который полезен в
-        телеграм чатах. Самый стандартный usecase - ниже на скриншоте (картинки
-        кликабельные):
+        <a href="https://t.me/techinterview_salaries_bot" target="_blank"
+          ><strong>&#64;techinterview_salaries_bot</strong></a
+        >, который полезен в телеграм чатах. Самый стандартный usecase - ниже на
+        скриншоте (картинки кликабельные):
       </div>
       <div class="mt-3">
         <img
@@ -24,11 +25,9 @@
       <div class="mt-5">
         <p>
           Для того, чтоб ответить таким сообщением, нужно тегнуть бота
-          <a href="https://t.me/techinterview_salaries_bot" target="_blank"
-            ><strong>&#64;techinterview_salaries_bot</strong></a
-          >, а затем кликнуть/тапнуть на вариант "Все специальности" в
-          выпадающем меню или начать вводить название специальности, чтобы
-          отфильтровать анкеты.
+          <strong>&#64;techinterview_salaries_bot</strong>, а затем
+          кликнуть/тапнуть на вариант "Все специальности" в выпадающем меню или
+          начать вводить название специальности, чтобы отфильтровать анкеты.
         </p>
         <p>
           Ниже представлена гифка, как это выглядит в деле (гифки кликабельные):
