--- a/src/app/modules/home/components/telegram-bot/telegram-bot.component.html
+++ b/src/app/modules/home/components/telegram-bot/telegram-bot.component.html
@@ -1,14 +1,33 @@
-<app-page-header>О телеграм боте</app-page-header>
+<app-page-header>О ботах в Telegram</app-page-header>
 
 <div class="container">
-  <div class="card">
-    <div class="card-body pt-3 pb-3">
+  <div class="card mb-5">
+    <div class="card-body p-5">
+      Телеграм боты - удобный способ быстро поделиться информацией и привлечь
+      внимание пользователей. Мы создали несколько ботов, которые могут быть
+      полезны вам.
+    </div>
+  </div>
+
+  <div class="card mb-5">
+    <div class="card-body p-5">
+      <div class="h1 mb-3" id="techinterview-salary-assistant-header">
+        Techinterview Salary Assistant
+        <a
+          class="text-decoration-none"
+          aria-label="anchor"
+          href="/about-telegram-bot#techinterview-salary-assistant-header"
+          ><i class="bi bi-link-45deg"></i
+        ></a>
+      </div>
       <div>
-        Да, у нас есть телеграм бот
+        Бот
         <a href="https://t.me/techinterview_salaries_bot" target="_blank"
           ><strong>&#64;techinterview_salaries_bot</strong></a
-        >, который полезен в телеграм чатах. Самый стандартный usecase - ниже на
-        скриншоте (картинки кликабельные):
+        >
+        быстро подскажет в чате, какую медиану получают те или иные специалисты.
+        Самый стандартный usecase - ниже на скриншоте ниже (все картинки
+        кликабельные):
       </div>
       <div class="mt-3">
         <img
@@ -24,6 +43,7 @@
 
       <div class="mt-5">
         <p>
+          Бот инлайновый, поэтому вам будет удобно сразу получить ответ в чате.
           Для того, чтоб ответить таким сообщением, нужно тегнуть бота
           <strong>&#64;techinterview_salaries_bot</strong>, а затем
           кликнуть/тапнуть на вариант "Все специальности" в выпадающем меню или
@@ -56,6 +76,60 @@
             "
           />
         </div>
+      </div>
+    </div>
+  </div>
+
+  <div class="card mb-5">
+    <div class="card-body p-5">
+      <div class="h1 mb-3" id="github-profile-bot-header">
+        Github Profile Bot
+        <a
+          class="text-decoration-none"
+          aria-label="anchor"
+          href="/about-telegram-bot#github-profile-bot-header"
+          ><i class="bi bi-link-45deg"></i
+        ></a>
+      </div>
+      <div>
+        Бот
+        <a href="https://t.me/github_profile_bot" target="_blank"
+          ><strong>&#64;github_profile_bot</strong></a
+        >
+        выдаст статистику по профилю Github. Информация будет полезна для того,
+        чтобы проверить, насколько кандидат активно контриьютит в open source.
+        Пример выдачи ниже:
+      </div>
+      <div class="mt-3 font-monospace">
+        Github stats for maximgorbatyuk<br />
+        Name: Maxim Gorbatyuk<br />
+        Profile created: 2015-07-15<br />
+        Profile URL<br /><br />
+        🌟 Social stats:<br />
+        - Followers: 34<br />
+        - Following: 11<br />
+        - Total stars received: 35<br />
+        - Public Repos: 14<br /><br />
+        - Issues created: 62<br />
+        - Pull requests: 214<br />
+        - Repositories forked: 0<br />
+        - Discussions opened: 0<br />
+        - Code reviews made: 16<br /><br />
+        💻 Contributions for last 12 month in public repositories (own and
+        organization ones):<br />
+        - Commits: 481<br />
+        - Files adjusted: 3,957<br />
+        - Lines changed: 202,102<br />
+        - Lines added: 137,168<br />
+        - Lines removed: 64,934<br /><br />
+
+        🔥 Top languages:<br />
+        - C# (363 commits)<br />
+        - TypeScript (197 commits)<br />
+        - HTML (2 commits)<br /><br />
+
+        📅 Data were taken at 2025-06-21 15:51:49 UTC<br />
+        Stats prepared by &#64;github_profile_bot<br />
       </div>
     </div>
   </div>
