--- a/src/app/modules/admin/components/openai-prompts/openai-prompts-admin-page.component.html
+++ b/src/app/modules/admin/components/openai-prompts/openai-prompts-admin-page.component.html
@@ -13,9 +13,9 @@
   <div class="card" *ngIf="prompts; else dataLoading">
     <div class="card-body p-3" *ngIf="prompts.length > 0; else nothingToShow">
       <div class="table-responsive">
-        <table class="table table-striped">
+        <table class="table table-hover">
           <thead>
-            <tr>
+            <tr class="small">
               <th>Тип</th>
               <th>Промпт</th>
               <th>Модель</th>
@@ -27,7 +27,7 @@
             </tr>
           </thead>
           <tbody>
-            <tr *ngFor="let item of prompts">
+            <tr *ngFor="let item of prompts" class="small">
               <td>{{ item.type }}</td>
               <td>
                 <div class="text-truncate" style="max-width: 300px">
