--- a/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.html
+++ b/src/app/modules/salaries/components/grades-min-max-salaries-chart/grades-min-max-chart.component.html
@@ -12,7 +12,8 @@
       Черные точки - это значения зарплаты, которые встречаются в выборке.
     </div>
     <div>
-      Для графика использованы 90% анкет. Первые 5% и последние 5% не учитываются.
+      Для графика использованы 90% анкет. Первые 5% и последние 5% не
+      учитываются.
     </div>
   </div>
 </div>
