--- a/src/app/modules/admin/components/openai-prompts/openai-prompts-admin-page.component.html
+++ b/src/app/modules/admin/components/openai-prompts/openai-prompts-admin-page.component.html
@@ -111,6 +111,7 @@
       <select class="form-select" formControlName="type">
         <option value="1">Компания</option>
         <option value="2">Чат</option>
+        <option value="3">Зарплаты (еженедельное обновление)</option>
       </select>
       <app-field-error [field]="editForm.get('type')"></app-field-error>
     </div>
