--- a/src/app/modules/admin/components/openai-prompts/openai-prompts-admin-page.component.html
+++ b/src/app/modules/admin/components/openai-prompts/openai-prompts-admin-page.component.html
@@ -112,6 +112,7 @@
         <option value="1">Компания</option>
         <option value="2">Чат</option>
         <option value="3">Зарплаты (еженедельное обновление)</option>
+        <option value="4">Отзывы (еженедельное обновление)</option>
       </select>
       <app-field-error [field]="editForm.get('type')"></app-field-error>
     </div>
